# ADAS-Delivery-Wizard

./: .gitignore  README.md  adas_delivery_confs.ini  gdalBuild.cmake  pyproject.toml  setup.py
adas_project/: adas.py  adas.ui  main.py
scripts/: clanup.sh
tests/: m1.py  testDownload.py  testUpload.py  testUpload2.py  y.py
